fix: card buttons z-index

--- a/src/assets/css/selected.css
+++ b/src/assets/css/selected.css
@@ -243,6 +243,7 @@ body {
   bottom: 0;
   left: 0; */
   overflow-x: auto;
+  z-index: 1;
 }
 
 .selected .card-buttons button {
